@@ -4,7 +4,8 @@
 =======================================================
 
 
-Apr 07 2010      gamma_only option included in ccalbec. Test04 updated. (AF)
+Apr 07 2010      gamma_only option included in ccalbec. Test04 updated. 
+                 Parallelism over kpt included in plot.x . (AF)
 
 Apr 06 2010      Configure wrapper updated. Eigenchannel writing fixed. 
                  Bug fixed in the implementation of overlaps within gamma_only. 
